--- a/config.toml
+++ b/config.toml
@@ -2,6 +2,10 @@ baseURL = "https://aws-study-guides.github.io"
 languageCode = "en-us"
 title = "AWS Study Guides"
 
+description = "Explore comprehensive AWS Certification Study Guides, including resources for the AWS Solutions Architect Associate (SAA) exam. Access detailed guides, flashcards, and practice tests to boost your cloud expertise and prepare effectively for AWS certifications."
+
+author = "Reese Gerjekian"
+
 [outputs]
 page = ["HTML"]
 
