--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,11 +1,10 @@
 {
-  "name": "app name",
-  "short_name": "short name",
-  "theme_color": "#fff",
-  "background_color": "#fff",
-  "display": "browser",
+  "name": "AWS Study Guides",
+  "short_name": "AWS SGs",
+  "theme_color": "#232f3e",
+  "background_color": "#f4f4f4",
+  "display": "standalone",
   "orientation": "portrait",
-  "scope": "/",
   "start_url": "/",
   "icons": [
     {
